syntax = "proto3";

option go_package = "github.com/panagiotisptr/hermes-messenger/protos";

service Authentication {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc GetPublicKeys(GetPublicKeysRequest) returns (GetPublicKeysResponse);
}

message RegisterRequest {
  string Email = 1;
  string Password = 2;
}

message RegisterResponse {}

message AuthenticateRequest {
  string Email = 1;
  string Password = 2;
}

message AuthenticateResponse {
  string RefreshToken = 1;
  string AccessToken = 2;
}

message RefreshRequest {
  string RefreshToken = 1;
}

message RefreshResponse {
  string AccessToken = 1;
}

message GetPublicKeysRequest {}

message PublicKey {
	string Uuid = 1;
	string Value = 2;
}

message GetPublicKeysResponse {
  repeated PublicKey PublicKeys = 1;
}
